django-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-app
          image: wombatoff/django-app:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: static-volume
              mountPath: /code/static
            - name: media-volume
              mountPath: /code/media
      volumes:
        - name: static-volume
          persistentVolumeClaim:
            claimName: django-static-pvc
        - name: media-volume
          persistentVolumeClaim:
            claimName: django-media-pvc
...

---
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: NodePort
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
...

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
spec:
  rules:
  - host: "star-burger.test"
    http:
      paths:
      - pathType: Prefix
        path: "/admin"
        backend:
          service:
            name: django-service
            port:
              number: 80
...
